# indicator_lora_commu

./: .gitignore  README.md
Indicator/: .editorconfig  CMakeLists.txt  sdkconfig.defaults
Indicator/main/: CMakeLists.txt  config.h  main.c  view_data.h
Indicator/main/Frame/: frame.c  frame.h
Indicator/main/Screen/: indicator_display.c
Indicator/main/Sensors/: SensorPayload.c  SensorPayload.h  sen5x.c  sen5x.h
Indicator/main/ui/: CMakeLists.txt  ui.c  ui.h
Indicator/main/ui/images/: ui_img_indicator_ver_png.c
Indicator/main/ui/screens/: ui_Screen_main.c
XIAO/: platformio.ini
XIAO/include/: Frame.h  SensorPayload.h  main.h  sensor_sen5x.h  wio_e5_at.h
XIAO/src/: Frame.cpp  main.cpp  sensor_sen5x.cpp  wio-e5-at.cpp
