set(UTIL_DIR util)
file(GLOB_RECURSE UTIL_SOURCES ${UTIL_DIR}/*.c)

set(CUSTOM_FRAME_DIR Frame)
file(GLOB_RECURSE CUSTOM_FRAME_SOURCES ${CUSTOM_FRAME_DIR}/*.c)

set(SENSOR_PAYLOAD_DIR Sensors)
file(GLOB_RECURSE SENSOR_PAYLOAD_SOURCES ${SENSOR_PAYLOAD_DIR}/*.c)

idf_component_register(
    SRCS "main.c" ${UTIL_SOURCES} ${CUSTOM_FRAME_SOURCES} ${SENSOR_PAYLOAD_SOURCES}
    INCLUDE_DIRS "."  ${UTIL_DIR}  ${CUSTOM_FRAME_DIR} ${SENSOR_PAYLOAD_DIR})
